--- a/app/modules/default/template.hbs
+++ b/app/modules/default/template.hbs
@@ -12,7 +12,12 @@
 		</code>
 	</p>
 	<h4>Font Size</h4>
-	<table local-class="table-1">
+	<table local-class="table-1" class="table">
+		<thead class="thead-dark">
+			<th>字体大小</th>
+			<th>字体重量</th>
+			<th>使用场景</th>
+		</thead>
 		<tr>
 			<td>24px</td>
 			<td>W600</td>
@@ -31,39 +36,41 @@
 	</table>
 	<h4>字阶与行高</h4>
 	<h4>Font Color</h4>
-	<table local-class="table-2">
-		<tr>
-			<td></td>
-			<td>色号</td>
-			<td>使用场景</td>
-		</tr>
-		<tr>
-			<td>
-				<div local-class="color-a"></div>
-			</td>
-			<td>#555555</td>
-			<td>用于一级字内容、一级标题、菜单选中文字、title</td>
-		</tr>
-		<tr>
-			<td>
-				<div local-class="color-b"></div>
-			</td>
-			<td>#999999</td>
-			<td>用于正文内容</td>
-		</tr>
-		<tr>
-			<td>
-				<div local-class="color-c"></div>
-			</td>
-			<td>#D3D3D3</td>
-			<td>用于辅助说明内容</td>
-		</tr>
-		<tr>
-			<td>
-				<div local-class="color-d"></div>
-			</td>
-			<td>#FF7D7E</td>
-			<td>用于强调文字</td>
-		</tr>
+	<table class="table" local-class="table-2">
+		<thead class="thead-dark">
+			<th></th>
+			<th>色号</th>
+			<th>使用场景</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>
+					<div local-class="color-a circle"></div>
+				</td>
+				<td>#555555</td>
+				<td>用于一级字内容、一级标题、菜单选中文字、title</td>
+			</tr>
+			<tr>
+				<td>
+					<div local-class="color-b circle"></div>
+				</td>
+				<td>#999999</td>
+				<td>用于正文内容</td>
+			</tr>
+			<tr>
+				<td>
+					<div local-class="color-c circle"></div>
+				</td>
+				<td>#D3D3D3</td>
+				<td>用于辅助说明内容</td>
+			</tr>
+			<tr>
+				<td>
+					<div local-class="color-d circle"></div>
+				</td>
+				<td>#FF7D7E</td>
+				<td>用于强调文字</td>
+			</tr>
+		</tbody>
 	</table>
 </section>
