完成theme-colors和button页面

--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -4,13 +4,19 @@
 		<nav>
 			<ol>
 				{{#link-to "default" tagName='li' activeClass="nav-active" }}
-					default
+					Default
 				{{/link-to}}
 				{{#link-to "layout" tagName='li' activeClass="nav-active" }}
-					layout
+					Layout
 				{{/link-to}}
 				{{#link-to "radio-checkbox" tagName='li' activeClass="nav-active" }}
 					Radio&Checkbox
+				{{/link-to}}
+				{{#link-to "theme-colors" tagName='li' activeClass="nav-active" }}
+					Theme-Colors
+				{{/link-to}}
+				{{#link-to "button" tagName='li' activeClass="nav-active" }}
+					Button
 				{{/link-to}}
 			</ol>
 		</nav>
