--- a/app/modules/application/styles.scss
+++ b/app/modules/application/styles.scss
@@ -31,49 +31,53 @@ body> :global(.ember-view) {
 		flex: 0 0 180px;
 		background-color: #9e9e9e;
 
-		ol {
-			padding: 0;
-			list-style: none;
-
-			li {
-				position: relative;
-				padding-left: 20px;
-				height: 36px;
-				line-height: 36px;
-				font-size: 18px;
-				cursor: pointer;
-
-				a {
-					text-decoration: none;
-					color: #1890FF;
-				}
-
-				&::before {
-					content: '';
-					position: absolute;
-					bottom: 0;
-					left: 100%;
-					width: 0;
-					height: 2px;
-					border-bottom: 2px solid #000;
-					transition: .2s all linear;
-				}
-
-				&:hover::before {
-					width: 100%;
-					left: 0;
-				}
-
-				li:hover~li::before {
-					left: 0;
-				}
-			}
-
-			.nav-active {
-				text-decoration: underline;
-				color: #1890FF;
-			}
+		nav {
+			height: 100%;
 		}
+
+		// ol {
+		// 	padding: 0;
+		// 	list-style: none;
+
+		// 	li {
+		// 		position: relative;
+		// 		padding-left: 20px;
+		// 		height: 36px;
+		// 		line-height: 36px;
+		// 		font-size: 18px;
+		// 		cursor: pointer;
+
+		// 		a {
+		// 			text-decoration: none;
+		// 			color: #1890FF;
+		// 		}
+
+		// 		&::before {
+		// 			content: '';
+		// 			position: absolute;
+		// 			bottom: 0;
+		// 			left: 100%;
+		// 			width: 0;
+		// 			height: 2px;
+		// 			border-bottom: 2px solid #000;
+		// 			transition: .2s all linear;
+		// 		}
+
+		// 		&:hover::before {
+		// 			width: 100%;
+		// 			left: 0;
+		// 		}
+
+		// 		li:hover~li::before {
+		// 			left: 0;
+		// 		}
+		// 	}
+
+		// 	.nav-active {
+		// 		text-decoration: underline;
+		// 		color: #1890FF;
+		// 	}
+		// }
 	}
 
 	.content {
@@ -82,5 +86,6 @@ body> :global(.ember-view) {
 		-ms-flex: 1;
 		flex: 1;
 		padding: 0 20px;
+		overflow: auto;
 	}
 }
