--- a/app/modules/button/template.hbs
+++ b/app/modules/button/template.hbs
@@ -2,33 +2,25 @@
 	<h3>Button 的使用方法</h3>
 	<h4>基础用法</h4>
 	{{#bp-button}}default{{/bp-button}}
-
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnDefault}}
-        {{/code-block}}
-
+	{{#code-block src="template.hbs" language='handlebars' }}
+		{{btnDefault}}
+	{{/code-block}}
 	{{#bp-button type="primary"}}Primary{{/bp-button}}
-
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnPrimary}}
-        {{/code-block}}
-
+	{{#code-block src="template.hbs" language='handlebars' }}
+		{{btnPrimary}}
+	{{/code-block}}
 	<hr>
 	<h4>禁止属性 disabled</h4>
 	{{#bp-button disabled=true}}disabled button{{/bp-button}}
-
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnDisabled}}
-        {{/code-block}}
-
+	{{#code-block src="template.hbs" language='handlebars' }}
+		{{btnDisabled}}
+	{{/code-block}}
 	<hr>
 	<h4>块级属性 block</h4>
 	{{#bp-button block=true onClick=(action 'submit')}}block button{{/bp-button}}
-
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnBlock}}
-        {{/code-block}}
-
+	{{#code-block src="template.hbs" language='handlebars' }}
+		{{btnBlock}}
+	{{/code-block}}
 	<hr>
 	<h4>基础的类型</h4>
 	{{#bp-button type="primary" onClick=(action 'submit')}}primary{{/bp-button}}
@@ -41,24 +33,9 @@
 		icon="https://s3.amazonaws.com/uifaces/faces/twitter/damenleeturks/128.jpg"}}
 		primary
 	{{/bp-button}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnprimary}}
-        {{/code-block}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnsecondary}}
-        {{/code-block}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btndanger}}
-        {{/code-block}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btndefault}}
-        {{/code-block}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btndisabled}}
-        {{/code-block}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnPprimary}}
-        {{/code-block}}
+	{{#code-block src="template.hbs" language='handlebars'}}
+		{{btnBasic}}
+	{{/code-block}}
 	<hr>
 	<h4>反转样式</h4>
 	{{#bp-button type="primary" reverse=true onClick=(action 'submit')}}reverse primary{{/bp-button}}
@@ -70,20 +47,7 @@
 		onClick=(action 'submit')
 		icon="https://s3.amazonaws.com/uifaces/faces/twitter/damenleeturks/128.jpg"}}reverse
 		primary{{/bp-button}}
-
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnRprimary}}
-        {{/code-block}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnRsecondary}}
-        {{/code-block}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnRdanger}}
-        {{/code-block}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnRdefault}}
-        {{/code-block}}
-        {{#code-block src="template.hbs" language='handlebars' }}
-	       {{btnRPprimary}}
-        {{/code-block}}
+	{{#code-block src="template.hbs" language='handlebars' }}
+		{{btnReverse}}
+	{{/code-block}}
 </section>
