--- a/app/modules/default/template.hbs
+++ b/app/modules/default/template.hbs
@@ -35,6 +35,36 @@
 		</tr>
 	</table>
 	<h4>字阶与行高</h4>
+	<table class="table">
+		<tr>
+			<td>FontSize</td>
+			<td>12</td>
+			<td>14</td>
+			<td>16</td>
+			<td>20</td>
+			<td>24</td>
+			<td>30</td>
+			<td>36</td>
+			<td>46</td>
+			<td>56</td>
+			<td>68</td>
+			<td>...</td>
+		</tr>
+		<tr>
+			<td>LineHeight</td>
+			<td>20</td>
+			<td>22</td>
+			<td>24</td>
+			<td>28</td>
+			<td>32</td>
+			<td>38</td>
+			<td>46</td>
+			<td>54</td>
+			<td>64</td>
+			<td>76</td>
+			<td>...</td>
+		</tr>
+	</table>
 	<h4>Font Color</h4>
 	<table class="table" local-class="table-2">
 		<thead class="thead-dark">
