新增 index 路由以及dropdown的展示、modal的展示

--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -81,6 +81,9 @@
 				{{#n.item}}
 					{{#n.link-to "progress"}}Progress{{/n.link-to}}
 				{{/n.item}}
+				{{#n.item}}
+					{{#n.link-to "modal"}}Modal{{/n.link-to}}
+				{{/n.item}}
 			{{/bp-nav}}
 		</nav>
 	</aside>
