bp-badge 的展示完成。

--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -87,6 +87,9 @@
 				{{#n.item}}
 					{{#n.link-to "tabs"}}Tabs{{/n.link-to}}
 				{{/n.item}}
+				{{#n.item}}
+					{{#n.link-to "badge"}}Badge{{/n.link-to}}
+				{{/n.item}}
 			{{/bp-nav}}
 		</nav>
 	</aside>
