bp-page-header 展示完成。

--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -66,6 +66,9 @@
 				{{#n.item}}
 					{{#n.link-to "empty-state"}}Empty-State{{/n.link-to}}
 				{{/n.item}}
+				{{#n.item}}
+					{{#n.link-to "page-header"}}Page-Header{{/n.link-to}}
+				{{/n.item}}
 			{{/bp-nav}}
 		</nav>
 	</aside>
