--- a/app/modules/default/template.hbs
+++ b/app/modules/default/template.hbs
@@ -5,10 +5,9 @@
 	</p>
 	<p>
 		<code>
-		"Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI",
-		"PingFang SC","Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue",
-		Helvetica, Arial,sans-serif,"Apple Color Emoji", "Segoe UI Emoji",
-		"Segoe UI Symbol";
+		system, -apple-system, BlinkMacSystemFont,
+		"PingFang SC", "Hiragino Sans GB", "Segoe UI", "Roboto", "Microsoft YaHei",
+		"Helvetica Neue", Helvetica, Arial, sans-serif;
 		</code>
 	</p>
 	<h4>Font Size</h4>
