--- a/app/modules/badge/template.hbs
+++ b/app/modules/badge/template.hbs
@@ -12,3 +12,6 @@
 <h2> Pharbers Company {{#bp-badge pill=true type='primary'}}new{{/bp-badge}}</h2>
 <h4>tagName = 'a'</h4>
 <h2> Pharbers Company {{#bp-badge tagName='a' pill=true type='primary'}}new{{/bp-badge}}</h2>
+{{!-- <p> --}}
+{{#bp-tag type='secondary'}}aha{{/bp-tag}}
+{{!-- </p> --}}
