--- a/app/modules/card/template.hbs
+++ b/app/modules/card/template.hbs
@@ -1,6 +1,14 @@
-{{#bp-card as |c|}}
-	{{c.header title='aaa'}}
-	{{#c.body}}
-		Card Body的内容
-	{{/c.body}}
-{{/bp-card}}
+{{bp-card class="mb-3"
+	src='https://i.loli.net/2019/02/13/5c63df11c3b5c.png'
+	category='category'
+	title='title'
+	desc='Description goes here'}}
+{{bp-card class="mb-3"
+	src='https://i.loli.net/2019/02/13/5c63df11c3b5c.png'
+	category='category'
+	title='title'}}
+{{bp-card class="mb-3"
+	src='https://i.loli.net/2019/02/13/5c63df11c3b5c.png'
+	category='category'
+	title='title'
+	state='opening'}}
