--- a/app/modules/application/styles.scss
+++ b/app/modules/application/styles.scss
@@ -28,7 +28,7 @@ body> :global(.ember-view) {
 		-webkit-flex: 0 0 180px;
 		-ms-flex: 0 0 180px;
 		flex: 0 0 180px;
-		background-color: #9e9e9e;
+		// background-color: #9e9e9e;
 
 		nav {
 			height: 100%;
