--- a/app/modules/button/template.hbs
+++ b/app/modules/button/template.hbs
@@ -48,24 +48,20 @@
 	<div class="dropdown-divider"></div>
 	<p class="mt-3">With Icon</p>
 	{{#bp-button class="mr-3" type="default"
-		icon="raised-hand"
-		iconColor='green'}}
+		icon="raised-hand"}}
 		RaisedHand
 	{{/bp-button}}
-	{{#bp-button type="default"
+	{{#bp-button type="warning"
 		iconOnly=true
-		icon="trash"
-		iconColor='red'}}
+		icon="trash"}}
 		Default
 	{{/bp-button}}
-	{{#bp-button type="default"
+	{{#bp-button type="primary"
 		iconOnly=true
-		icon="abord"
-		iconColor='red'}}
-		Abord
+		icon="abord"}}
 	{{/bp-button}}
-	{{#bp-button type="default"}}
-		{{bp-icon icon="add" color="orange"}}
+	{{#bp-button type="danger"}}
+		{{bp-icon icon="add" }}
 		Add
 	{{/bp-button}}
 	{{#code-block src="template.hbs" language='handlebars'}}
