--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -1,7 +1,7 @@
 <h2 local-class="title" class="text-center  bg-info" id="title">Welcome to BP-Components-UI</h2>
 <section local-class="container">
 	<aside>
-		<nav>
+		{{!-- <nav>
 			{{#bp-nav theme='light' as |n|}}
 				{{#n.item}}
 					{{#n.link-to "default"}}Default{{/n.link-to}}
@@ -72,6 +72,41 @@
 				{{#n.item}}
 					{{#n.link-to "pagination" }}Pagination{{/n.link-to}}
 				{{/n.item}}
+			{{/bp-nav}}
+		</nav> --}}
+		<nav>
+			{{#bp-nav theme='light' as |n|}}
+				{{#n.link-to "default"}}Default{{/n.link-to}}
+				{{#n.link-to "theme-colors"}}Theme-Colors{{/n.link-to}}
+				{{#n.link-to "layout"}}
+					{{bp-icon icon='add'}}
+					Layout{{/n.link-to}}
+				{{#n.dropdown
+					title='Buttons' 
+					icon="add" 
+					as |dd|}}
+					{{#dd.link-to "button"}}
+						Button{{/dd.link-to}}
+					{{#dd.link-to "button-group"}}
+						ButtonGroup{{/dd.link-to}}
+				{{/n.dropdown}}
+				{{#n.link-to "dropdown"}}Dropdown{{/n.link-to}}
+				{{#n.link-to "choose"}}Radio&Checkbox{{/n.link-to}}
+				{{#n.dropdown title='Inputs' as |dd|}}
+					{{#dd.link-to "input"}}
+						BaiscInput{{/dd.link-to}}
+					{{#dd.link-to "search-bar"}}
+						SearchBar{{/dd.link-to}}
+				{{/n.dropdown}}
+				{{#n.link-to "card"}}Card{{/n.link-to}}
+				{{#n.link-to "navs"}}Nav{{/n.link-to}}
+				{{#n.link-to "progress"}}Progress{{/n.link-to}}
+				{{#n.link-to "modal"}}Modal{{/n.link-to}}
+				{{#n.link-to "tabs"}}Tabs{{/n.link-to}}
+				{{#n.link-to "badge"}}Badge{{/n.link-to}}
+				{{#n.link-to "empty-state"}}Empty-State{{/n.link-to}}
+				{{#n.link-to "page-header"}}Page-Header{{/n.link-to}}
+				{{#n.link-to "pagination" }}Pagination{{/n.link-to}}
 			{{/bp-nav}}
 		</nav>
 	</aside>
