--- a/app/modules/card/template.hbs
+++ b/app/modules/card/template.hbs
@@ -11,4 +11,5 @@
 	src='https://i.loli.net/2019/02/13/5c63df11c3b5c.png'
 	category='category'
 	title='title'
-	state='opening'}}
+	tagType='open'
+	tagState='opening'}}
