--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -1,112 +1,40 @@
 <h2 local-class="title" class="text-center  bg-info" id="title">Welcome to BP-Components-UI</h2>
 <section local-class="container">
 	<aside>
-		{{!-- <nav>
-			{{#bp-nav theme='light' as |n|}}
-				{{#n.item}}
-					{{#n.link-to "default"}}Default{{/n.link-to}}
-				{{/n.item }}
-				{{#n.item}}
-					{{#n.link-to "theme-colors"}}Theme-Colors{{/n.link-to}}
-				{{/n.item }}
-				{{#n.item}}
-					{{#n.link-to "layout"}}
-						{{bp-icon icon='add'}}
-						Layout{{/n.link-to}}
-				{{/n.item }}
-				{{#n.dropdown
-					title='Buttons' 
-					icon="add" 
-					as |dd|}}
-					{{#dd.item}}
-						{{#dd.link-to "button"}}
-							{{bp-icon icon='add'}}
-							Button{{/dd.link-to}}
-					{{/dd.item}}
-					{{#dd.item}}
-						{{#dd.link-to "button-group"}}
-							{{bp-icon icon='add' }}
-							ButtonGroup{{/dd.link-to}}
-					{{/dd.item}}
-				{{/n.dropdown}}
-				{{#n.item}}
-					{{#n.link-to "dropdown"}}Dropdown{{/n.link-to}}
-				{{/n.item}}
-				{{#n.item}}
-					{{#n.link-to "choose"}}Radio&Checkbox{{/n.link-to}}
-				{{/n.item}}
-				{{#n.dropdown title='Inputs' as |dd|}}
-					{{#dd.item}}
-						{{#dd.link-to "input"}}
-							BaiscInput{{/dd.link-to}}
-					{{/dd.item}}
-					{{#dd.item}}
-						{{#dd.link-to "search-bar"}}
-							SearchBar{{/dd.link-to}}
-					{{/dd.item}}
-				{{/n.dropdown}}
-				{{#n.item}}
-					{{#n.link-to "card"}}Card{{/n.link-to}}
-				{{/n.item}}
-				{{#n.item}}
-					{{#n.link-to "navs"}}Nav{{/n.link-to}}
-				{{/n.item}}
-				{{#n.item}}
-					{{#n.link-to "progress"}}Progress{{/n.link-to}}
-				{{/n.item}}
-				{{#n.item}}
-					{{#n.link-to "modal"}}Modal{{/n.link-to}}
-				{{/n.item}}
-				{{#n.item}}
-					{{#n.link-to "tabs"}}Tabs{{/n.link-to}}
-				{{/n.item}}
-				{{#n.item}}
-					{{#n.link-to "badge"}}Badge{{/n.link-to}}
-				{{/n.item}}
-				{{#n.item}}
-					{{#n.link-to "empty-state"}}Empty-State{{/n.link-to}}
-				{{/n.item}}
-				{{#n.item}}
-					{{#n.link-to "page-header"}}Page-Header{{/n.link-to}}
-				{{/n.item}}
-				{{#n.item}}
-					{{#n.link-to "pagination" }}Pagination{{/n.link-to}}
-				{{/n.item}}
-			{{/bp-nav}}
-		</nav> --}}
 		<nav>
 			{{#bp-nav theme='light' as |n|}}
-				{{#n.link-to "default"}}Default{{/n.link-to}}
-				{{#n.link-to "theme-colors"}}Theme-Colors{{/n.link-to}}
+				{{#n.link-to "default"}}{{bp-icon icon='management'}}Default{{/n.link-to}}
+				{{#n.link-to "theme-colors"}}{{bp-icon icon='management'}}Theme-Colors{{/n.link-to}}
 				{{#n.link-to "layout"}}
-					{{bp-icon icon='add'}}
+					{{bp-icon icon='management'}}
 					Layout{{/n.link-to}}
+				{{#n.link-to "icon"}}{{bp-icon icon='management'}}Icon{{/n.link-to}}
 				{{#n.dropdown
 					title='Buttons' 
-					icon="add" 
+					icon="management" 
 					as |dd|}}
 					{{#dd.link-to "button"}}
 						Button{{/dd.link-to}}
 					{{#dd.link-to "button-group"}}
 						ButtonGroup{{/dd.link-to}}
 				{{/n.dropdown}}
-				{{#n.link-to "dropdown"}}Dropdown{{/n.link-to}}
-				{{#n.link-to "choose"}}Radio&Checkbox{{/n.link-to}}
-				{{#n.dropdown title='Inputs' as |dd|}}
+				{{#n.link-to "dropdown"}}{{bp-icon icon='management'}}Dropdown{{/n.link-to}}
+				{{#n.link-to "choose"}}{{bp-icon icon='management'}}Radio&Checkbox{{/n.link-to}}
+				{{#n.dropdown title='Inputs' icon="management"  as |dd|}}
 					{{#dd.link-to "input"}}
 						BaiscInput{{/dd.link-to}}
 					{{#dd.link-to "search-bar"}}
 						SearchBar{{/dd.link-to}}
 				{{/n.dropdown}}
-				{{#n.link-to "card"}}Card{{/n.link-to}}
-				{{#n.link-to "navs"}}Nav{{/n.link-to}}
-				{{#n.link-to "progress"}}Progress{{/n.link-to}}
-				{{#n.link-to "modal"}}Modal{{/n.link-to}}
-				{{#n.link-to "tabs"}}Tabs{{/n.link-to}}
-				{{#n.link-to "badge"}}Badge{{/n.link-to}}
-				{{#n.link-to "empty-state"}}Empty-State{{/n.link-to}}
-				{{#n.link-to "page-header"}}Page-Header{{/n.link-to}}
-				{{#n.link-to "pagination" }}Pagination{{/n.link-to}}
+				{{#n.link-to "card"}}{{bp-icon icon='management'}}Card{{/n.link-to}}
+				{{#n.link-to "navs"}}{{bp-icon icon='management'}}Nav{{/n.link-to}}
+				{{#n.link-to "progress"}}{{bp-icon icon='management'}}Progress{{/n.link-to}}
+				{{#n.link-to "modal"}}{{bp-icon icon='management'}}Modal{{/n.link-to}}
+				{{#n.link-to "tabs"}}{{bp-icon icon='management'}}Tabs{{/n.link-to}}
+				{{#n.link-to "badge"}}{{bp-icon icon='management'}}Badge{{/n.link-to}}
+				{{#n.link-to "empty-state"}}{{bp-icon icon='management'}}Empty-State{{/n.link-to}}
+				{{#n.link-to "page-header"}}{{bp-icon icon='management'}}Page-Header{{/n.link-to}}
+				{{#n.link-to "pagination" }}{{bp-icon icon='management'}}Pagination{{/n.link-to}}
 			{{/bp-nav}}
 		</nav>
 	</aside>
