将 图表 替换为 BP-Components 中的组件。

--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -37,9 +37,11 @@
 				{{#n.link-to "pagination" }}{{bp-icon icon='management'}}Pagination{{/n.link-to}}
 				{{#n.dropdown title='Charts' icon="management"  as |dd|}}
 					{{#dd.link-to "line"}}
-						Charts-line{{/dd.link-to}}
+						Chart-Line{{/dd.link-to}}
 					{{#dd.link-to "bar"}}
-						Charts-bar{{/dd.link-to}}
+						Chart-Bar{{/dd.link-to}}
+					{{#dd.link-to "chart-pie"}}
+						Chart-Pie{{/dd.link-to}}
 				{{/n.dropdown}}
 			{{/bp-nav}}
 		</nav>
