--- a/app/modules/bar/template.hbs
+++ b/app/modules/bar/template.hbs
@@ -1,4 +1,8 @@
-<h3>charts - line</h3>
+<h3>charts - bar</h3>
 <div local-class="simple-bar">
-	{{echarts-chart option=barOption}}
+	{{bp-bar
+		data=barOption
+		title='RMB SOM Ranking-Total Market by MAT 2018 Sep'
+		subText='something subtext'
+		barData=barData}}
 </div>
