--- a/app/modules/line/template.hbs
+++ b/app/modules/line/template.hbs
@@ -1,4 +1,8 @@
 <h3>charts - line</h3>
-<div local-class="simple-line">
-	{{echarts-chart option=lineOption}}
+<div local-class="sefl-line">
+	{{bp-line
+		title='BP-Component/bp-line'
+		xaxisData=xaxisData
+		lineData=lineData
+		lineColor=lineColor}}
 </div>
