新增 展示：empty-state的几种以及page-header 的几种。

--- a/app/modules/index/template.hbs
+++ b/app/modules/index/template.hbs
@@ -1,4 +1,4 @@
-<h3>目前完成的组件有</h3>
+<h3 local-class="self-title">目前完成的组件有</h3>
 <ul class="list-group  list-group-flush">
 	<li class="list-group-item">Layout</li>
 	<li class="list-group-item">buttons</li>
