--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -32,7 +32,18 @@
 				{{#n.link-to "modal"}}{{bp-icon icon='management'}}Modal{{/n.link-to}}
 				{{#n.link-to "tabs"}}{{bp-icon icon='management'}}Tabs{{/n.link-to}}
 				{{#n.link-to "badge"}}{{bp-icon icon='management'}}Badge{{/n.link-to}}
-				{{#n.link-to "empty-state"}}{{bp-icon icon='management'}}Empty-State{{/n.link-to}}
+				{{#n.dropdown title='Empty-State' icon="management"  as |dd|}}
+					{{#dd.link-to "empty-state"}}
+						totalEmptyState{{/dd.link-to}}
+					{{#dd.link-to "empty-state-primary"}}
+						primary-button{{/dd.link-to}}
+					{{#dd.link-to "empty-state-double-btn"}}
+						double-button{{/dd.link-to}}
+					{{#dd.link-to "empty-state-link-button"}}
+						link-button{{/dd.link-to}}
+					{{#dd.link-to "empty-state-no-button"}}
+						no-button{{/dd.link-to}}
+				{{/n.dropdown}}
 				{{#n.link-to "page-header"}}{{bp-icon icon='management'}}Page-Header{{/n.link-to}}
 				{{#n.link-to "pagination" }}{{bp-icon icon='management'}}Pagination{{/n.link-to}}
 				{{#n.dropdown title='Charts' icon="management"  as |dd|}}
