--- a/app/modules/page-header/template.hbs
+++ b/app/modules/page-header/template.hbs
@@ -28,3 +28,15 @@
 		{{/footer.right}}
 	{{/ph.footer}}
 {{/bp-page-header}}
+<div class="dropdown-divider"></div>
+<h4>bp-page-header/only-title-desc</h4>
+{{bp-page-header/only-title-desc
+	title='百造Pacee朝阳'
+	desc='北京市密云区朝阳北路龙湖长楹天街购物中心西区三层24、25b'
+}}
+{{bp-page-header/only-title-desc
+	title='百造Pacee朝阳'
+	linkTo='card'
+	linkToText="let's go to another route"
+}}
+<div class="dropdown-divider"></div>
