--- a/app/modules/card/template.hbs
+++ b/app/modules/card/template.hbs
@@ -1,15 +1,25 @@
-{{bp-card class="mb-3"
+{{bp-card
+	class="mb-3"
 	src='https://i.loli.net/2019/02/13/5c63df11c3b5c.png'
-	category='category'
-	title='title'
+	category='语言与人文'
+	title='唐诗背后的诗人'
 	desc='Description goes here'}}
+<div class="dropdown-divider"></div>
 {{bp-card class="mb-3"
 	src='https://i.loli.net/2019/02/13/5c63df11c3b5c.png'
-	category='category'
-	title='title'}}
+	category='数理与逻辑'
+	title='牛顿为什么会被苹果砸到呢？让我们一起来思考'}}
+<div class="dropdown-divider"></div>
 {{bp-card class="mb-3"
 	src='https://i.loli.net/2019/02/13/5c63df11c3b5c.png'
-	category='category'
+	category='other'
 	title='title'
 	tagType='open'
-	tagState='opening'}}
+	tagState='开放中'}}
+<div class="dropdown-divider"></div>
+{{bp-card class="mb-3"
+	src='https://i.loli.net/2019/02/13/5c63df11c3b5c.png'
+	category='other'
+	title='title'
+	tagType='close'
+	tagState='未开放'}}
