--- a/app/modules/choose/template.hbs
+++ b/app/modules/choose/template.hbs
@@ -1,6 +1,6 @@
 <h3>radio&checkbox</h3>
 <p>此组件为单选或多选按钮,使用方式如下</p>
-<p>接受的参数有:</p>
+<p>Properties</p>
 <h4>type</h4>
 <p><em>type</em> 可接受的值的类型为字符串,有两个值:一个是'radio'-单选,另一个为'checkbox'为多选.</p>
 <h4>vertical</h4>
@@ -9,20 +9,25 @@
 	将选项设置为block,另一个是:
 	<button class="btn btn-primary" {{action (mut vertical) false}}>false</button>
 	将选项设置为inline.</p>
-<p>接受的方法有:</p>
+<p>Methods</p>
 <h4>onChange</h4>
 <p><em>onChange</em>此方法有一个参数,当单选的时候为对象,多选的时候为数组.</p>
 如下例:
 <h4 class="mt-3">单选</h4>
-{{#choose-group type="radio" vertical=vertical onChange=(action 'chooseItem') as |choose|}}
+{{#choose-group
+	type="radio" 
+	vertical=vertical 
+	value=radioValue
+	onChange=(action (mut radioValue )) as |choose|}}
 	{{#each model as |radio|}}
 		{{choose.item radio=radio}}
 	{{/each}}
 {{/choose-group}}
-<p class="mt-3">您选择的是: {{radioValue}}</p>
+<p class="mt-3">您选择的是: {{radioValue.value}}</p>
 {{#code-block src="template.hbs" language='handlebars' }}
 	{{radioCode}}
 {{/code-block}}
+<div class="dropdown-divider"></div>
 <h4>多选</h4>
 {{#choose-group type="checkbox" vertical=vertical onChange=(action 'chooseItem') as |choose|}}
 	{{#each model as |radio|}}
