--- a/app/modules/dropdown/template.hbs
+++ b/app/modules/dropdown/template.hbs
@@ -1,9 +1,12 @@
 <section>
 	<h3>bp-dropdown</h3>
-	<p>其中 button 为要选中的内容或默认值</p>
-	<p> option 为选项。接受 value 参数以及 onClick 方法。其中 value 为选中后要展示的值，
-		onClick 方法为
+	<p>其中 bp-dropdown.button 为要选中的内容或默认值</p>
+	<p>bp-dropdown.menu 为下拉展示栏</p>
+	<p> menu.option 为选项。接受 value 参数以及 onClick 方法。
+		其中 value 为item项目，具体展示值在 option 内部自主选择。
 	</p>
+	<h4>method</h4>
+	<p>onClick 点击选项之后的操作</p>
 	{{#bp-dropdown as |dd|}}
 		{{#dd.button }}
 			{{#if dropdownValue.value}}
@@ -38,4 +41,7 @@
 			</tr>
 		</tbody>
 	</table>
+	{{#code-block src="template.hbs" language='handlebars' }}
+		{{dropdownCode}}
+	{{/code-block}}
 </section>
