--- a/app/modules/choose/template.hbs
+++ b/app/modules/choose/template.hbs
@@ -19,7 +19,7 @@
 	vertical=vertical 
 	value=radioValue
 	onChange=(action (mut radioValue )) as |choose|}}
-	{{#each model as |radio|}}
+	{{#each model.objectStyle as |radio|}}
 		{{choose.item radio=radio}}
 	{{/each}}
 {{/choose-group}}
@@ -28,14 +28,44 @@
 	{{radioCode}}
 {{/code-block}}
 <div class="dropdown-divider"></div>
+{{!-- <p>only value</p>
+{{#choose-group
+	type="radio" 
+	vertical=vertical 
+	value=radioValue1
+	onChange=(action (mut radioValue1 )) as |choose|}}
+	{{#each model.onlyValue as |radio|}}
+		{{choose.item radio=radio}}
+	{{/each}}
+{{/choose-group}} --}}
+<h4>bp-radio</h4>
+{{bp-radio title='form label' curValue=radioValue1 radios=model.onlyValue}}
+<p class="mt-3">您选择的是: {{radioValue1}}</p>
 <h4>多选</h4>
-{{#choose-group type="checkbox" vertical=vertical onChange=(action 'chooseItem') as |choose|}}
-	{{#each model as |radio|}}
+{{#choose-group
+	type="checkbox" 
+	vertical=vertical 
+	value=checkboxValue
+	onChange=(action 'chooseItem') as |choose|}}
+	{{#each model.objectStyle as |radio|}}
 		{{choose.item radio=radio}}
 	{{/each}}
 {{/choose-group}}
-<p class="mt-3">您选择的是: {{checkboxValue}}</p>
+<p class="mt-3">您选择的是:
+	{{#each checkboxValue as |item|}}
+		{{item.value}}
+	{{/each}}
+</p>
+<div class="dropdown-divider"></div>
+<h4>bp-checkbox</h4>
+{{bp-checkbox title='form label' 
+	checkboxs=model.onlyValue 
+	curValues=checkboxValue1}}
+<p class="mt-3">您选择的是:
+	{{#each checkboxValue1 as |item|}}
+		{{item}}
+	{{/each}}
+</p>
 {{#code-block language='handlebars' }}
 	{{checkboxCode}}
 {{/code-block}}
-{{outlet}}
