--- a/app/modules/choose/template.hbs
+++ b/app/modules/choose/template.hbs
@@ -41,6 +41,9 @@
 <h4>bp-radio</h4>
 {{bp-radio title='form label' curValue=radioValue1 radios=model.onlyValue}}
 <p class="mt-3">您选择的是: {{radioValue1}}</p>
+<h4>bp-radio-index</h4>
+{{bp-radio-index title='只有index' curValueIndex=radioValue2 radios=model.onlyValue}}
+<p class="my-3">您选择的是: {{radioValue2}}</p>
 <h4>多选</h4>
 {{#choose-group
 	type="checkbox" 
