更新 bp-dropdown 的相关文档。

--- a/app/modules/dropdown/template.hbs
+++ b/app/modules/dropdown/template.hbs
@@ -74,6 +74,7 @@
 	{{bp-dropdown-simple
 		title='choose your poem'
 		desc='which one?'
+		disabled=true
 		valueId=modelId
 		options=model.keyName
 		optionKey='name'}}
