--- a/app/modules/input/template.hbs
+++ b/app/modules/input/template.hbs
@@ -101,3 +101,5 @@
 	onChange=(action (mut inputValuepd1))}}
 	<p class="mt-3">您输入的值为： {{inputValuepd1}}</p>
 </div>
+<h3>bp-input/simple</h3>
+{{bp-input/simple title='simple' value=23 vertical=false color='red'}}
