--- a/app/modules/input/template.hbs
+++ b/app/modules/input/template.hbs
@@ -15,6 +15,7 @@
 <p>METHOD</p>
 <nav class="nav justify-content-center">
 	<a class="nav-link active" href="#onchange">onChange</a>
+	<a class="nav-link active" href="#onkeydown">onKeyDown</a>
 </nav>
 <div id="block">
 	<h4>block</h4>
@@ -101,5 +102,16 @@
 	onChange=(action (mut inputValuepd1))}}
 	<p class="mt-3">您输入的值为： {{inputValuepd1}}</p>
 </div>
+<div id="onchange"></div>
+<div id="onkeydown">
+	<h4>onKeyDown</h4>
+	{{bp-input
+	block=true 
+	prepend='left'
+	onKeyDown=(action (mut inputValuepd2))}}
+	<p class="mt-3">您输入的值为： {{inputValuepd2}}</p>
+</div>
 <h3>bp-input/simple</h3>
 {{bp-input/simple title='simple' value=23 vertical=false color='red'}}
+<h4>widthSize</h4>
+{{bp-input/simple title='simple' widthSize='small' vertical=false color='red'}}
