--- a/app/modules/input/template.hbs
+++ b/app/modules/input/template.hbs
@@ -15,7 +15,7 @@
 <p>METHOD</p>
 <nav class="nav justify-content-center">
 	<a class="nav-link active" href="#onchange">onChange</a>
-	<a class="nav-link active" href="#onkeydown">onKeyDown</a>
+	<a class="nav-link active" href="#onkeypress">onKeyPress</a>
 </nav>
 <div id="block">
 	<h4>block</h4>
@@ -103,12 +103,12 @@
 	<p class="mt-3">您输入的值为： {{inputValuepd1}}</p>
 </div>
 <div id="onchange"></div>
-<div id="onkeydown">
-	<h4>onKeyDown</h4>
+<div id="onkeypress">
+	<h4>onKeyPress</h4>
 	{{bp-input
 	block=true 
 	prepend='left'
-	onKeyDown=(action (mut inputValuepd2))}}
+	onKeyPress=(action 'keyPress')}}
 	<p class="mt-3">您输入的值为： {{inputValuepd2}}</p>
 </div>
 <h3>bp-input/simple</h3>
