--- a/app/modules/default/styles.scss
+++ b/app/modules/default/styles.scss
@@ -1,3 +1,47 @@
+.font-setting {
+	.title {
+		td:nth-child(2) {
+			@extend %title;
+		}
+	}
+
+	.header-large {
+		td:nth-child(2) {
+			@extend %header-large;
+		}
+	}
+
+	.header-medium {
+		td:nth-child(2) {
+			@extend %header-medium;
+		}
+	}
+
+	.header-small {
+		td:nth-child(2) {
+			@extend %header-small;
+		}
+	}
+
+	.p-primary {
+		td:nth-child(2) {
+			@extend %p-primary;
+		}
+	}
+
+	.p-secondary {
+		td:nth-child(2) {
+			@extend %p-secondary;
+		}
+	}
+
+	.p-small {
+		td:nth-child(2) {
+			@extend %p-small;
+		}
+	}
+}
+
 .table-1 {
 	tr:first-child {
 		font-size: 24px;
