--- a/app/modules/default/template.hbs
+++ b/app/modules/default/template.hbs
@@ -10,6 +10,74 @@
 		"Helvetica Neue", Helvetica, Arial, sans-serif;
 		</code>
 	</p>
+	<h4>字体设置</h4>
+	<table class="table" local-class="font-setting">
+		<thead class="thead-dark">
+			<th>position</th>
+			<th>example</th>
+			<th>weight/LH</th>
+			<th>color</th>
+			<th>desc</th>
+		</thead>
+		<tbody>
+			<tr local-class="title">
+				<td>title</td>
+				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
+				</td>
+				<td>M24/33L</td>
+				<td>N800</td>
+				<td>大标题,通常用于 page header,一个页面只出现一次</td>
+			</tr>
+			<tr local-class="header-large">
+				<td>header-large</td>
+				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
+				</td>
+				<td>M20/28L</td>
+				<td>n800</td>
+				<td>大标题,通常用于空状态的提示信息标题等</td>
+			</tr>
+			<tr local-class="header-medium">
+				<td>header-medium</td>
+				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
+				</td>
+				<td>M16/22L</td>
+				<td>n800</td>
+				<td>中标题,通常用于对话框标题等</td>
+			</tr>
+			<tr local-class="header-small">
+				<td>header-small</td>
+				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
+				</td>
+				<td>M14/20L</td>
+				<td>n800</td>
+				<td>小标题,通常用于表单页和信息页的信息标题等</td>
+			</tr>
+			<tr local-class="p-primary">
+				<td>p-primary</td>
+				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
+				</td>
+				<td>R14/20L</td>
+				<td>n600</td>
+				<td>正文,用于大多数普通层级信息及段落等</td>
+			</tr>
+			<tr local-class="p-secondary">
+				<td>p-secondary</td>
+				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
+				</td>
+				<td>R14/20L</td>
+				<td>n100</td>
+				<td>辅助文字,用于次级信息,如表单的帮助信息等</td>
+			</tr>
+			<tr local-class="p-small">
+				<td>p-small</td>
+				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
+				</td>
+				<td>R12/L17</td>
+				<td>n100</td>
+				<td>最次级信息</td>
+			</tr>
+		</tbody>
+	</table>
 	<h4>Font Size</h4>
 	<table local-class="table-1" class="table">
 		<thead class="thead-dark">
