--- a/app/modules/badge/template.hbs
+++ b/app/modules/badge/template.hbs
@@ -9,9 +9,9 @@
 <h3> Pharbers Company {{#bp-badge type='light'}}new{{/bp-badge}}</h3>
 <h2> Pharbers Company {{#bp-badge type='dark'}}new{{/bp-badge}}</h2>
 <h4>pill</h4>
-<h2> Pharbers Company {{#bp-badge pill=true type='primary'}}new{{/bp-badge}}</h2>
+<h2> Pharbers Company {{#bp-badge pill=false type='secondary'}}new{{/bp-badge}}</h2>
 <h4>tagName = 'a'</h4>
 <h2> Pharbers Company {{#bp-badge tagName='a' pill=true type='primary'}}new{{/bp-badge}}</h2>
 {{!-- <p> --}}
-{{#bp-tag type='secondary'}}aha{{/bp-tag}}
+{{#bp-tag type='primary'}}aha{{/bp-tag}}
 {{!-- </p> --}}
