--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -88,6 +88,42 @@
 					{{/code-block}}
 				</td>
 			</tr>
+			<tr>
+				<td>dashboard</td>
+				<td>{{bp-icon icon='dashboard'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{dashboard}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>data</td>
+				<td>{{bp-icon icon='data'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{data}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>growth</td>
+				<td>{{bp-icon icon='growth'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{growth}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>pc</td>
+				<td>{{bp-icon icon='pc'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{pc}}
+					{{/code-block}}
+				</td>
+			</tr>
 		</tbody>
 	</table>
 </section>
