仪表盘 以及 icon 的展示。

--- a/app/modules/chart-circle/template.hbs
+++ b/app/modules/chart-circle/template.hbs
@@ -1,1 +1,6 @@
 {{bp-circle}}
+<div class="dropdown-divider"></div>
+{{!-- {{bp-circle opts=opts}} --}}
+<div class="dropdown-divider"></div>
+<h2>bp-gauge</h2>
+{{bp-gauge}}
