--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -124,6 +124,42 @@
 					{{/code-block}}
 				</td>
 			</tr>
+			<tr>
+				<td>info</td>
+				<td>{{bp-icon icon='info'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{info}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>warning</td>
+				<td>{{bp-icon icon='warning'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{warning}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>male</td>
+				<td>{{bp-icon icon='male'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{male}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>female</td>
+				<td>{{bp-icon icon='female'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{female}}
+					{{/code-block}}
+				</td>
+			</tr>
 		</tbody>
 	</table>
 </section>
