添加 increase icon 的展示.

--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -160,6 +160,15 @@
 					{{/code-block}}
 				</td>
 			</tr>
+			<tr>
+				<td>increase</td>
+				<td>{{bp-icon icon='increase'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{increase}}
+					{{/code-block}}
+				</td>
+			</tr>
 		</tbody>
 	</table>
 </section>
