tm 图表的样式展示。

--- a/app/modules/bar/template.hbs
+++ b/app/modules/bar/template.hbs
@@ -6,3 +6,7 @@
 		subText='something subtext'
 		barData=barData}}
 </div>
+<div class="dropdown-divider"></div>
+<div local-class="simple-bar">
+	{{bp-bar/tm}}
+</div>
