--- a/app/modules/line/template.hbs
+++ b/app/modules/line/template.hbs
@@ -6,3 +6,12 @@
 		lineData=lineData
 		lineColor=lineColor}}
 </div>
+<div class="dropdown-divider"></div>
+<h3>charts - line/tm</h3>
+<div local-class="self-line-tm" class="py-4 px-4">
+	{{bp-line/tm
+		title="产品份额竞争趋势"
+		subText='全国'
+		lineData=lineDataTm
+		lineColor=lineColorTm}}
+</div>
