--- a/app/modules/bar/template.hbs
+++ b/app/modules/bar/template.hbs
@@ -1,12 +1,11 @@
 <h3>charts - bar</h3>
 <div local-class="simple-bar">
 	{{bp-bar
-		data=barOption
 		title='RMB SOM Ranking-Total Market by MAT 2018 Sep'
 		subText='something subtext'
 		barData=barData}}
 </div>
 <div class="dropdown-divider"></div>
-<div local-class="simple-bar">
+{{!-- <div local-class="simple-bar">
 	{{bp-bar/tm}}
-</div>
+</div> --}}
