--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -169,6 +169,24 @@
 					{{/code-block}}
 				</td>
 			</tr>
+			<tr>
+				<td>priority-high</td>
+				<td>{{bp-icon icon='priority-high'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{priorityHigh}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>priority-low</td>
+				<td>{{bp-icon icon='priority-low'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{priorityLow}}
+					{{/code-block}}
+				</td>
+			</tr>
 		</tbody>
 	</table>
 </section>
